--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "jquery": "^3.6.0",
+    "react-bootstrap": "^1.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
